--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -6,78 +6,89 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true">
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".ui.activity.MovieItem">
-    <ImageView
-        android:id="@+id/item_poster"
-        android:layout_width="180dp"
-        android:layout_height="250dp"
-        android:adjustViewBounds="true"
-        android:scaleType="fitCenter"
-        android:layout_below="@id/item_number"
-        app:srcCompat="@mipmap/ic_launcher" />
+
+        <ImageView
+            android:id="@+id/item_poster"
+            android:layout_width="180dp"
+            android:layout_height="250dp"
+            android:layout_below="@id/item_number"
+            android:adjustViewBounds="true"
+            android:scaleType="fitCenter"
+            app:srcCompat="@mipmap/ic_launcher" />
+
         <TextView
             android:id="@+id/item_number"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             tools:text="№" />
+
         <TextView
             android:id="@+id/item_title"
-            android:layout_toRightOf="@id/item_number"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_toRightOf="@id/item_number"
             tools:text="Название" />
+
         <TextView
             android:id="@+id/item_year"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            tools:text="Год"
+            android:layout_below="@id/item_title"
             android:layout_toRightOf="@id/item_poster"
-            android:layout_below="@id/item_title"/>
+            tools:text="Год" />
+
         <TextView
             android:id="@+id/item_mark"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            tools:text="оценка"
+            android:layout_below="@id/item_title"
             android:layout_toRightOf="@id/item_year"
-            android:layout_below="@id/item_title"/>
+            tools:text="оценка" />
+
         <TextView
             android:id="@+id/item_country"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            tools:text="страна"
+            android:layout_below="@id/item_title"
             android:layout_toRightOf="@id/item_mark"
-            android:layout_below="@id/item_title"/>
+            tools:text="страна" />
+
         <TextView
             android:id="@+id/item_awards"
             android:layout_width="wrap_content"
-            tools:text="награды"
+            android:layout_height="wrap_content"
             android:layout_below="@id/item_mark"
             android:layout_toRightOf="@id/item_poster"
-            android:layout_height="wrap_content" />
+            tools:text="награды" />
+
         <TextView
             android:id="@+id/item_actors"
-            tools:text="актеры"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_below="@id/item_awards"
             android:layout_toRightOf="@id/item_poster"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            tools:text="актеры" />
+
         <TextView
             android:id="@+id/item_site"
-            android:layout_toRightOf="@id/item_poster"
-            android:layout_below="@id/item_actors"
-            tools:text="site"
-            android:autoLink="web"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_below="@id/item_actors"
+            android:layout_toRightOf="@id/item_poster"
+            android:autoLink="web"
+            tools:text="site" />
+
         <TextView
             android:id="@+id/item_sinops"
-            android:layout_below="@id/item_poster"
-            tools:text="Описание"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_below="@id/item_poster"
+            tools:text="Описание" />
 
     </RelativeLayout>
 </android.support.v4.widget.NestedScrollView>
