--- a/app/src/main/res/layout/fragment_movie_change.xml
+++ b/app/src/main/res/layout/fragment_movie_change.xml
@@ -13,174 +13,156 @@
     <ImageView
         android:id="@+id/item_poster1"
         android:layout_width="180dp"
-        android:layout_height="274dp"
-        android:layout_below="@id/item_number1"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
+        android:layout_height="0dp"
+        android:layout_marginEnd="8dp"
         android:adjustViewBounds="true"
         android:scaleType="fitCenter"
+        app:layout_constraintBottom_toBottomOf="@+id/item_awards1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@mipmap/ic_launcher" />
 
-    <TextView
-        android:id="@+id/item_number1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:visibility="gone"
-        android:layout_marginBottom="16dp"
-        app:layout_constraintBottom_toTopOf="@+id/button1"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/item_site1"
-        tools:text="№" />
-
     <EditText
         android:id="@+id/item_title1"
-        android:textSize="14sp"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_toRightOf="@id/item_number1"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:singleLine="false"
+        android:hint="Название"
+        android:textSize="14sp"
+        android:inputType="textPersonName"
         app:layout_constraintEnd_toStartOf="@+id/item_poster1"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:hint="Название" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/item_year1"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_below="@id/item_title1"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        android:inputType="number"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
         android:layout_toRightOf="@id/item_poster"
+        android:hint="Год"
+        android:maxLength="4"
+        android:inputType="number"
         android:textSize="14sp"
         app:layout_constraintEnd_toStartOf="@+id/item_poster1"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/item_title1"
-        android:hint="Год" />
+        app:layout_constraintTop_toBottomOf="@+id/item_title1" />
 
     <EditText
         android:id="@+id/item_mark1"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_below="@id/item_title1"
-        android:layout_marginTop="256dp"
-        android:layout_marginEnd="16dp"
-        android:inputType="numberDecimal"
-        android:layout_marginBottom="16dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
         android:layout_toRightOf="@id/item_year1"
+        android:hint="оценка"
+        android:inputType="numberDecimal"
         android:textSize="14sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/item_poster1"
-        app:layout_constraintVertical_bias="0.0"
-        android:hint="оценка" />
+        app:layout_constraintEnd_toStartOf="@+id/item_poster1"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/item_actors1" />
 
     <EditText
         android:id="@+id/item_awards1"
-        android:textSize="14sp"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_below="@id/item_mark1"
-        android:inputType="textImeMultiLine"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
         android:layout_toRightOf="@id/item_poster1"
+        android:hint="награды"
+        android:singleLine="false"
+        android:inputType="textPersonName"
+        android:textSize="14sp"
         app:layout_constraintEnd_toStartOf="@+id/item_poster1"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/item_actors1"
-        android:hint="награды" />
+        app:layout_constraintTop_toBottomOf="@+id/item_mark1" />
 
     <EditText
         android:id="@+id/item_actors1"
-        android:textSize="14sp"
-        android:layout_width="wrap_content"
-        android:inputType="textImeMultiLine"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_below="@id/item_awards1"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:singleLine="false"
         android:layout_toRightOf="@id/item_poster1"
+        android:hint="актеры"
+        android:inputType="textPersonName"
+        android:textSize="14sp"
         app:layout_constraintEnd_toStartOf="@+id/item_poster1"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/item_year1"
-        android:hint="актеры" />
+        app:layout_constraintTop_toBottomOf="@+id/item_year1" />
 
     <EditText
         android:id="@+id/item_site1"
-        android:layout_width="394dp"
-        android:textSize="14sp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_below="@id/item_actors1"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
         android:layout_toRightOf="@id/item_poster1"
         android:autoLink="web"
         android:visibility="gone"
+        android:hint="site"
+        android:inputType="textWebEmailAddress"
+        android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/checkBox1"
-        android:hint="site" />
+        app:layout_constraintTop_toBottomOf="@+id/checkBox1" />
 
     <EditText
         android:id="@+id/item_sinops1"
-        android:layout_width="189dp"
-        android:textSize="14sp"
-        android:inputType="textImeMultiLine"
-        android:layout_height="110dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:layout_below="@id/item_poster"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        app:layout_constraintEnd_toStartOf="@+id/item_poster1"
-        app:layout_constraintHorizontal_bias="0.0"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:hint="Описание"
+        android:inputType="textMultiLine"
+        android:textSize="14sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/item_awards1"
-        android:hint="Описание" />
+        app:layout_constraintTop_toBottomOf="@+id/item_site1" />
 
     <CheckBox
         android:id="@+id/checkBox1"
-        android:checked="false"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:checked="false"
         android:text="Включить ссылку"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/item_sinops1" />
+        app:layout_constraintTop_toBottomOf="@+id/item_awards1" />
 
     <Button
         android:id="@+id/button1"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="8dp"
-        tools:text="Сохранить"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/item_mark1"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/checkBox1" />
+        app:layout_constraintTop_toBottomOf="@+id/item_sinops1"
+        tools:text="Сохранить" />
 
 
 </android.support.constraint.ConstraintLayout>
