--- a/app/src/main/res/layout/activity_list_item.xml
+++ b/app/src/main/res/layout/activity_list_item.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true"
-    tools:context=".ui.activity.MovieItem">
+    tools:context=".ui.activity.MovieItemActivity">
     <FrameLayout
         android:id="@+id/movie_frag"
         android:layout_width="match_parent"
