--- a/app/src/main/res/layout/fragment_movie_about.xml
+++ b/app/src/main/res/layout/fragment_movie_about.xml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<android.support.v4.widget.NestedScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:id="@+id/nestedScrollView">
+<android.support.constraint.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.activity.MovieAboutFragment">
@@ -25,141 +29,142 @@
 
     <ImageView
         android:id="@+id/item_poster"
-        android:layout_width="180dp"
-        android:layout_height="274dp"
-        android:layout_below="@id/item_number"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
+        android:layout_width="200dp"
+        android:layout_height="0dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
         android:adjustViewBounds="true"
-        android:scaleType="fitCenter"
+        app:layout_constraintBottom_toBottomOf="@+id/item_awards"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/appBarLayout1"
         app:srcCompat="@mipmap/ic_launcher" />
 
     <TextView
-        android:id="@+id/item_number"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/item_site"
-        tools:text="№" />
-
-    <TextView
         android:id="@+id/item_title"
-        android:layout_width="wrap_content"
+        android:background="@color/colorBackground"
+        android:textColor="@color/colorText"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_toRightOf="@id/item_number"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:textSize="20sp"
         app:layout_constraintEnd_toStartOf="@+id/item_poster"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/appBarLayout1"
         tools:text="Название" />
 
     <TextView
         android:id="@+id/item_year"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:background="@color/colorBackground"
+        android:textColor="@color/colorText"
         android:layout_below="@id/item_title"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
         android:layout_toRightOf="@id/item_poster"
+        android:textSize="20sp"
         app:layout_constraintEnd_toStartOf="@+id/item_poster"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/item_country"
         tools:text="Год" />
 
     <TextView
         android:id="@+id/item_mark"
-        android:layout_width="65dp"
-        android:layout_height="18dp"
-        android:layout_below="@id/item_title"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_toRightOf="@id/item_year"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:textColor="@color/colorText"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/item_site"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/item_sinops"
         tools:text="оценка" />
 
     <TextView
         android:id="@+id/item_country"
-        android:layout_width="wrap_content"
+        android:textColor="@color/colorText"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_below="@id/item_title"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_toRightOf="@id/item_mark"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:textSize="20sp"
         app:layout_constraintEnd_toStartOf="@+id/item_poster"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/item_title"
         tools:text="страна" />
 
     <TextView
         android:id="@+id/item_awards"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_below="@id/item_mark"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
+        android:layout_below="@id/item_sinops"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:background="@color/colorBackground"
+        android:textColor="@color/colorText"
         android:layout_toRightOf="@id/item_poster"
+        android:textSize="20sp"
         app:layout_constraintEnd_toStartOf="@+id/item_poster"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/item_actors"
         tools:text="награды" />
 
     <TextView
         android:id="@+id/item_actors"
-        android:layout_width="wrap_content"
+        android:textColor="@color/colorText"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_below="@id/item_awards"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
         android:layout_toRightOf="@id/item_poster"
+        android:textSize="20sp"
         app:layout_constraintEnd_toStartOf="@+id/item_poster"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/item_year"
         tools:text="актеры" />
 
     <TextView
         android:id="@+id/item_site"
-        android:layout_width="394dp"
-        android:layout_height="15dp"
-        android:layout_below="@id/item_actors"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
+        android:layout_width="0dp"
+        android:textColor="@color/colorText"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/item_sinops"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
         android:layout_toRightOf="@id/item_poster"
         android:autoLink="web"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/item_sinops"
+        app:layout_constraintTop_toBottomOf="@+id/item_awards"
         tools:text="site" />
 
     <TextView
         android:id="@+id/item_sinops"
-        android:layout_width="189dp"
-        android:layout_height="110dp"
-        android:layout_below="@id/item_poster"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        app:layout_constraintEnd_toStartOf="@+id/item_poster"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:singleLine="false"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:background="@color/colorBackground"
+        android:textColor="@color/colorText"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/item_awards"
+        app:layout_constraintTop_toBottomOf="@+id/item_site"
         tools:text="Описание" />
-
 </android.support.constraint.ConstraintLayout>
+</android.support.v4.widget.NestedScrollView>
